Fix register and login page text not visible

--- a/css/style.css
+++ b/css/style.css
@@ -84,10 +84,17 @@ a {
 }
 form {
   padding-left: 20px;
+  color: white;
 }
 h3 {
   padding-left: 20px;
 }
 footer {
   padding-left: 20px;
+}
+p {
+  color: white;
+}
+h1 {
+  color: white;
 }
